--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"main-title\">\n",
-    "Intro to RL \n",
-    "</div>\n",
+    "\n",
+    "# Intro to RL \n",
     "\n",
     "\n",
     "## Problem setup: We want to make an AI that is able to complete a simple video game.\n",
@@ -29,8 +27,7 @@
     "\n",
     "Check out [openAI gym's docs](http://gym.openai.com/docs/) to see how the environments work in general and in more detail.\n",
     "\n",
-    "Let's set up our simulation to train our agent in.\n",
-    "</div>"
+    "Let's set up our simulation to train our agent in.\n"
    ]
   },
   {
