--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -300,7 +300,7 @@
     "What if we don't have a model?\n",
     "</div>\n",
     "How big is the input space to the action-state value function?\n",
-    "<div"
+    "</div>"
    ]
   },
   {
@@ -309,7 +309,7 @@
    "source": [
     "<div class=\"body\">\n",
     "<div class=\"title\">\n",
-    "\n",
+    "yo\n",
     "</div>\n",
     "<div"
    ]
