--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "<div style=\"background-color: black; color: orange;\">\n",
     "# Intro to RL \n",
+    "</div>\n",
     "\n",
     "\n",
     "## Problem setup: We want to make an AI that is able to complete a simple video game.\n",
