--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: black; color: orange;\">\n",
     "# Intro to RL \n",
-    "</div>\n",
-    "\n",
     "\n",
     "## Problem setup: We want to make an AI that is able to complete a simple video game.\n",
     "\n",
@@ -33,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,10 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "Once we have an agent in the game, what do we do?\n",
-    "</div>\n",
+    "## Once we have an agent in the game, what do we do?\n",
     "\n",
     "Our agent has no idea of how to win the game. It simply observes states that change based on it's actions and receives a reward signal for doing so.\n",
     "So the agent has to learn about the game for itself. Just like a baby learns to interact with it's world by playing with it, our agent has to try random actions to figure out when and why it receives negative or positive rewards.\n",
@@ -66,14 +60,12 @@
     "\n",
     "We need our agent to understand what actions might lead it to achieving high rewards, but it doesn't know anything about how to complete the game yet. So let's set up our environment and implement a random policy that takes in a state and returns a random action for the agent to take.\n",
     "\n",
-    "# picture maybe\n",
-    "\n",
-    "</div>"
+    "# picture maybe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 0\n"
+      "Episode 0\n",
+      "Episode finished after 17 timesteps.\n",
+      "Episode 1\n"
      ]
     }
    ],
@@ -124,10 +118,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "How do we know if we are doing well?\n",
-    "</div>\n",
+    "\n",
+    "## How do we know if we are doing well?\n",
     "\n",
     "When our agent takes this action and moves into a new state, the environment returns it a reward. The reward when it reaches the goal is +1, and 0 everywhere else. The reward that the agent receives at any point can be considered as what it feels in that moment - like pain or pleasure.\n",
     "\n",
@@ -188,8 +180,7 @@
     "![](./images/backup_algo.png)\n",
     "\n",
     "Value iteration is a type of **value based** method. Notice that to learn an optimal policy, we never have to represent it explicitly. There is no function which represents the policy.\n",
-    "\n",
-    "</div>"
+    "\n"
    ]
   },
   {
@@ -309,17 +300,6 @@
    "metadata": {},
    "source": [
     "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "yo\n",
-    "</div>\n",
-    "<div"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"body\">\n",
     "<div class=\"title\">End of notebook!\n",
     "</div>\n",
     "\n",
@@ -327,90 +307,6 @@
     "- [Policy Gradients]()\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');\n",
-       "#notebook-container {\n",
-       "\tbackground-color: #ff822e;\n",
-       "}\n",
-       ".CodeMirror {\n",
-       "\tbackground-color: white;\n",
-       "border-radius: 10px;\n",
-       "}\n",
-       ".body {\n",
-       "\tbackground-color: black;\n",
-       "\tcolor: #ff822e;\n",
-       "\tpadding: 10px;\n",
-       "\tborder-radius: 10px;\n",
-       "\tfont-size: 17px;\n",
-       "\tfont-family: montserrat;\n",
-       "}\n",
-       "\n",
-       ".main-title {\n",
-       "\tfont-size: 50px;\n",
-       "\tfont-weight: 1000;\n",
-       "\tline-height: 1.0;\n",
-       "}\n",
-       "\n",
-       ".title {\n",
-       "\tfont-size: 30px;\n",
-       "\tline-height: 1.0;\n",
-       "\tfont-weight: 1000;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.core.display import HTML\n",
-    "def css_styling():\n",
-    "    styles = open(\"./style.css\", \"r\").read()\n",
-    "    return HTML(styles)\n",
-    "css_styling()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
