--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -187,13 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "Implement the backup algorithm 🔥\n",
-    "</div>\n",
+    "## Implement the backup algorithm 🔥\n",
     "\n",
-    "Now our agent is exploring the environment, let's implement the backup algorithm to update our estimates of the value of each state.\n",
-    "</div>\n"
+    "Now our agent is exploring the environment, let's implement the backup algorithm to update our estimates of the value of each state."
    ]
   },
   {
@@ -219,10 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "How can we use the values that we know to perform well?\n",
-    "</div>\n",
+    "## How can we use the values that we know to perform well?\n",
     "\n",
     "Now that our agent is capable of exploring and learning about it's environment, we need to make it take advantage of what it knows so that it can perform well.\n",
     "Our random policy has helped us to estimate the values of each state, which means we have some idea of how good each state is. Think about how we could use this knowledge to make our agent perform well before reading the next paragraphs.\n",
@@ -230,18 +223,14 @@
     "In this simple version of the game, we know exactly what actions will lead us to what states. That means we have a perfect **model** of the environment. A model is a function that tells us how the state will change when we take certain actions. E.g. we know that if the agent tries to move up into an empty space, then that's where it will end up.\n",
     "\n",
     "Because we know exactly what states we can end up in by taking an action, we can just look at the value of the states and choose the action which leads us to the state with the greatest value. So we just move into the best state that we can reach at any point.\n",
-    "A policy that always takes the action that it expects to end up in the best, currently reachable state is called a **greedy policy**.\n",
-    "</div>\n"
+    "A policy that always takes the action that it expects to end up in the best, currently reachable state is called a **greedy policy**.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "Why not just act greedily all the time?\n",
-    "</div>\n",
+    "## Why not just act greedily all the time?\n",
     "\n",
     "If we act greedily all the time then we will move into the state with the best value. But remember that these values are only estimates based on our agent's experience with the game, which means that they might not be correct. So if we want to make sure that our agent will do well by always choosing the next action greedily, we need to make sure that it has good estimates for the values of those states. This brings us to a core challenge in reinforcement learning: **the exploration vs exploitation dilemma**. Our agent can either exploit what it knows by using it's current knowledge to choose the best action, or it can explore more and improve it's knowledge perhaps learning that some actions are even worse than what it does currently.\n",
     "\n",
@@ -252,9 +241,7 @@
     "\n",
     "As our agent explores more, it becomes more confident in predicting how valuable any state is. Once it knows a lot, it should start to explore less and exploit what it knows more. That means that we should decrease epsilon over time.\n",
     "\n",
-    "Let's implement it\n",
-    "\n",
-    "</div>"
+    "Let's implement it"
    ]
   },
   {
@@ -272,7 +259,6 @@
     "\n",
     "num_episodes = 100\n",
     "\n",
-    "\n",
     "# INITIALISE THE ENVIRONMENT\n",
     "### COPY FROM PREVIOUS CODE CELL\n",
     "\n",
@@ -287,25 +273,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">\n",
-    "What if we don't have a model?\n",
-    "</div>\n",
-    "How big is the input space to the action-state value function?\n",
-    "</div>"
+    "## What if we don't have a model?\n",
+    "How big is the input space to the action-state value function?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"body\">\n",
-    "<div class=\"title\">End of notebook!\n",
-    "</div>\n",
+    "## End of notebook!\n",
     "\n",
     "Next you might want to check out:\n",
-    "- [Policy Gradients]()\n",
-    "</div>"
+    "- [Policy Gradients]()\n"
    ]
   }
  ],
