--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "We need our agent to understand what actions might lead it to achieving high rewards, but it doesn't know anything about how to complete the game yet. So let's set up our environment and implement a random policy that takes in a state and returns a random action for the agent to take.\n",
     "\n",
-    "# picture maybe"
+    "![](./images/policy.png)"
    ]
   },
   {
@@ -132,24 +132,21 @@
     "\n",
     "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\". The measure of this, is called the *value* of the state. If we had a way to estimate this, then we could look ahead to the state that each action would take us to and take the action which results in us landing in the state with best value. A function that predicts this value is called a **state-value function**.\n",
     "\n",
-    "# diagram of following value function\n",
+    "![](./images/follow_values.png)\n",
     "\n",
     "### So how good *is* each state?\n",
     "Intuitively, we want our agents to receive as much reward as possible.\n",
     "In general, the goal of reinforcement learning is to maximise this future reward. \n",
     "\n",
-    "# goal of RL equation\n",
-    "![](./images/objective.png)\n",
+    "![](./images/goal_of_rl.png)\n",
     "\n",
     "The value of a state is the total reward that we can expect from this state onwards. \n",
     "This future reward is also known as the return.\n",
     "\n",
-    "# return\n",
-    "![](./images/return.png)\n",
+    "![](./images/undiscounted_return.png)\n",
     "\n",
     "To determine what these values are, we can have our agent play one run-through of the game and then *back-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
     "\n",
-    "# backup diagram\n",
     "![](./images/backup.png)\n",
     "\n",
     "#### Is getting a reward now as good as getting the same reward later?\n",
