--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -130,24 +130,11 @@
     "- A robot might receive a negative reward as it's battery depletes, but still make good progress towards its goal.\n",
     "- A chess playing agent might receive a positive reward for taking an opponent's piece, but make a bad move in doing so by exposing its king to an attack eventually causing it to lose the game.\n",
     "\n",
-    "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\". The measure of this, is called the *value* of the state. If we had a way to estimate this, then we could look ahead to the state that each action would take us to and take the action which results in us landing in the state with best value. A function that predicts this value is called a **state-value function**.\n",
-    "\n",
-    "![](./images/follow_values.png)\n",
-    "\n",
-    "### So how good *is* each state?\n",
-    "Intuitively, we want our agents to receive as much reward as possible.\n",
-    "In general, the goal of reinforcement learning is to maximise this future reward. \n",
-    "\n",
-    "![](./images/goal_of_rl.png)\n",
-    "\n",
-    "The value of a state is the total reward that we can expect from this state onwards. \n",
+    "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\". A measure of this is amount of reward that an agent can expect from this point onwards.\n",
+    "ate is the total reward that we can expect from this state onwards. \n",
     "This future reward is also known as the return.\n",
     "\n",
     "![](./images/undiscounted_return.png)\n",
-    "\n",
-    "To determine what these values are, we can have our agent play one run-through of the game and then *back-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
-    "\n",
-    "![](./images/backup.png)\n",
     "\n",
     "#### Is getting a reward now as good as getting the same reward later?\n",
     "- What if the reward is removed from the game in the next timestep?\n",
@@ -155,38 +142,40 @@
     "- What if a larger reward is introduced and you don't have enough energy to reach both?\n",
     "- What about inflation?\n",
     "\n",
-    "It's better to get rewards sooner.\n",
+    "It's better to get rewards sooner rather than later.\n",
     "\n",
     "![](./images/decay.png)\n",
     "\n",
     "We can encode this into our goal by using a **discount factor**, $\\gamma \\in [0, 1]$ ($\\gamma$ between 0 and 1). This makes the goal become:\n",
     "\n",
-    "![](./images/discounted_obj.png)\n",
+    "![](./images/discounted_return.png)\n",
     "\n",
     "\n",
-    "#### How good is the terminal state?\n",
-    "In this initial version of the game we get +1 reward when we reach the goal. So +1 is the value of that state!\n",
-    "#### How good is the last state before the game ends?\n",
-    "Well we don't get a reward for this state. But we know that the action we took led to the terminal state where we got a reward of +1. So discounting that future reward gives us an estimate of the value of this state at $\\gamma$.\n",
+    "The value of these return values can be defined recursively as shown below.\n",
+    "Because of this, we can calculate the returns by having our agent play one run-through of the game and then *back-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
+    "# recursive img\n",
+    "![](./images/recursive_return.png)\n",
     "\n",
-    "This process is recursive, and we can continue to apply it to each preceding state in the trajectory that we took until we arrive back at the initial state, having estimated values for every state that we encountered. Some states may not have been visited and as such won't have had their values updated yet.\n",
+    "### So how good *is* each state?\n",
+    "In general, the goal of reinforcement learning is to maximise the **expected** future reward. That is, to maximise the expected return from a the current state onwards. The measure of this, is called the *value* of the state (or the state value). A function that predicts this value is called a **state-value function**.\n",
     "\n",
-    "### The backup algorithm for value iteration\n",
+    "# value function\n",
+    "![](./images/value_function_def.png)\n",
     "\n",
-    "# algo\n",
-    "![](./images/backup_algo.png)\n",
+    "If we had a way to estimate this, then we could look ahead to the state that each action would take us to and take the action which results in us landing in the state with best value. \n",
     "\n",
-    "Value iteration is a type of **value based** method. Notice that to learn an optimal policy, we never have to represent it explicitly. There is no function which represents the policy.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Implement the backup algorithm 🔥\n",
+    "![](./images/follow_values.png)\n",
     "\n",
-    "Now our agent is exploring the environment, let's implement the backup algorithm to update our estimates of the value of each state."
+    "Values will not be updated for states that aren't visited to during an episode.\n",
+    "\n",
+    "# update values\n",
+    "![](./images/update_values.png)\n",
+    "\n",
+    "If we initialise the value for each state as zero, and then average the return for each state over many episodes, that average return will converge to the true value of the state for this policy. This process of iteratively updating the value function is called **value iteration**.\n",
+    "\n",
+    "Value iteration is a type of **value based** method. Notice that to learn an optimal policy, we never have to represent it explicitly. There is no function which represents the policy. Instead we just hill-climb the values of each state.\n",
+    "\n",
+    "Now that our agent is exploring the environment, let's implement value iteration."
    ]
   },
   {
@@ -220,7 +209,18 @@
     "In this simple version of the game, we know exactly what actions will lead us to what states. That means we have a perfect **model** of the environment. A model is a function that tells us how the state will change when we take certain actions. E.g. we know that if the agent tries to move up into an empty space, then that's where it will end up.\n",
     "\n",
     "Because we know exactly what states we can end up in by taking an action, we can just look at the value of the states and choose the action which leads us to the state with the greatest value. So we just move into the best state that we can reach at any point.\n",
-    "A policy that always takes the action that it expects to end up in the best, currently reachable state is called a **greedy policy**.\n"
+    "A policy that always takes the action that it expects to end up in the best, currently reachable state is called a **greedy policy**.\n",
+    "\n",
+    "Let's implement a greedy policy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### implement greedy policy"
    ]
   },
   {
@@ -264,6 +264,33 @@
     "\n",
     "    # FOR EACH TIMESTEP, SELECT AN ACTION USING OUR EPSILON-GREEDY POLICY\n",
     "    ### IMPLEMENT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How can we find an optimal policy?\n",
+    "\n",
+    "An optimal policy would take the best possible action in any state. Because of this, the optimal value function would give the maximum possible values for any state.\n",
+    "\n",
+    "The maximum state-value of a state is equivalent to the maximum state-action value when taking the best action in that state.\n",
+    "\n",
+    "Following this from the first line below, we can derive a recursive definition of the optimal value function.\n",
+    "\n",
+    "In the last step, we even remove the policy from the equation entirely! This means that value iteration never needs to explicitly represent a policy in terms of a function that takes in a state and returns a distribution over actions.\n",
+    "Instead, value iteration uses a model, $p(s', r | s, a)$, to look one step ahead, and take the action, $a$, that most likely leads it to the next state that has the best state-value function.\n",
+    "\n",
+    "![](./images/bellman_op_v.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# implement value iteration to find optimal value function"
    ]
   },
   {
