--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -131,7 +131,6 @@
     "- A chess playing agent might receive a positive reward for taking an opponent's piece, but make a bad move in doing so by exposing its king to an attack eventually causing it to lose the game.\n",
     "\n",
     "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\". A measure of this is amount of reward that an agent can expect from this point onwards.\n",
-    "ate is the total reward that we can expect from this state onwards. \n",
     "This future reward is also known as the return.\n",
     "\n",
     "![](./images/undiscounted_return.png)\n",
@@ -153,14 +152,13 @@
     "\n",
     "The value of these return values can be defined recursively as shown below.\n",
     "Because of this, we can calculate the returns by having our agent play one run-through of the game and then *back-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
-    "# recursive img\n",
+    "\n",
     "![](./images/recursive_return.png)\n",
     "\n",
     "### So how good *is* each state?\n",
-    "In general, the goal of reinforcement learning is to maximise the **expected** future reward. That is, to maximise the expected return from a the current state onwards. The measure of this, is called the *value* of the state (or the state value). A function that predicts this value is called a **state-value function**.\n",
+    "In general, the goal of reinforcement learning is to maximise the **expected** future reward. That is, to maximise the expected return from a the current state onwards. The measure of this, is called the *value* of the state (or the state value). A function that predicts this value is called a **state-value function** or **value function**.\n",
     "\n",
-    "# value function\n",
-    "![](./images/value_function_def.png)\n",
+    "![](./images/value_def.png)\n",
     "\n",
     "If we had a way to estimate this, then we could look ahead to the state that each action would take us to and take the action which results in us landing in the state with best value. \n",
     "\n",
@@ -168,19 +166,18 @@
     "\n",
     "Values will not be updated for states that aren't visited to during an episode.\n",
     "\n",
-    "# update values\n",
-    "![](./images/update_values.png)\n",
-    "\n",
     "If we initialise the value for each state as zero, and then average the return for each state over many episodes, that average return will converge to the true value of the state for this policy. This process of iteratively updating the value function is called **value iteration**.\n",
     "\n",
-    "Value iteration is a type of **value based** method. Notice that to learn an optimal policy, we never have to represent it explicitly. There is no function which represents the policy. Instead we just hill-climb the values of each state.\n",
+    "![](./images/update_values.png)\n",
+    "\n",
+    "Value iteration is a type of **value based** method. Notice that to learn an optimal policy, we never have to represent it explicitly. There is no function which represents the policy. Instead we just look-ahead and choose the action that maximises the value of the next state.\n",
     "\n",
     "Now that our agent is exploring the environment, let's implement value iteration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +228,7 @@
     "\n",
     "If we act greedily all the time then we will move into the state with the best value. But remember that these values are only estimates based on our agent's experience with the game, which means that they might not be correct. So if we want to make sure that our agent will do well by always choosing the next action greedily, we need to make sure that it has good estimates for the values of those states. This brings us to a core challenge in reinforcement learning: **the exploration vs exploitation dilemma**. Our agent can either exploit what it knows by using it's current knowledge to choose the best action, or it can explore more and improve it's knowledge perhaps learning that some actions are even worse than what it does currently.\n",
     "\n",
-    "# An epsilon-greedy policy\n",
+    "## An epsilon-greedy policy\n",
     "We can combine our random policy and our greedy policy to make an improved policy that both explores its environment and exploits its current knowledge. An $\\epsilon$-greedy (epsilon-greedy) policy is one which exploits what it knows most of the time, but with probability $\\epsilon$ will instead select a random action to try.\n",
     "\n",
     "## Do we need to keep exploring once we are confident in the values of states?\n",
@@ -274,19 +271,23 @@
     "\n",
     "An optimal policy would take the best possible action in any state. Because of this, the optimal value function would give the maximum possible values for any state.\n",
     "\n",
-    "The maximum state-value of a state is equivalent to the maximum state-action value when taking the best action in that state.\n",
-    "\n",
-    "Following this from the first line below, we can derive a recursive definition of the optimal value function.\n",
+    "In the first line below, the maximum state-value of a state is equivalent to the maximum state-action value when taking the best action in that state. Following this, we can derive a recursive definition of the optimal value function.\n",
     "\n",
     "In the last step, we even remove the policy from the equation entirely! This means that value iteration never needs to explicitly represent a policy in terms of a function that takes in a state and returns a distribution over actions.\n",
-    "Instead, value iteration uses a model, $p(s', r | s, a)$, to look one step ahead, and take the action, $a$, that most likely leads it to the next state that has the best state-value function.\n",
+    "Instead, value iteration uses a **model**, $p(s', r | s, a)$, to look one step ahead, and take the action, $a$, that most likely leads it to the next state that has the best state-value function.\n",
     "\n",
-    "![](./images/bellman_op_v.png)"
+    "A **model** defines how the state changes. It is also known as the transition dynamics of the environment. In our case the model is really simple: we are certain that taking the action to move right will move our agent one space to the right as long as there are no obstacles. There is no randomness in our environment (e.g. no wind that might push us into a different cell when we try to move right). That is, our environment is deterministic, not stochastic.\n",
+    "\n",
+    "![](./images/bellman_op_v.png)\n",
+    "\n",
+    "![](./images/backup_v.png)\n",
+    "\n",
+    "![](./images/update_rule_v.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +299,24 @@
    "metadata": {},
    "source": [
     "## What if we don't have a model?\n",
-    "How big is the input space to the action-state value function?"
+    "\n",
+    "Without a model that tells our agent what states it can reach next, it can't look ahead. Not even one step. So the agent won't be able to use value iteration to find an optimal policy. \n",
+    "\n",
+    "### We cant find out \"how good each state is\" without a model\n",
+    "However, if we can find out \"how good each action in each state is\" without a model. A function that predicts this is called the **state-action value function**:\n",
+    "\n",
+    "![](./images/q_def.png)\n",
+    "\n",
+    "![](./images/bellman_op_q.png)\n",
+    "\n",
+    "![](./images/backup_q.png)\n",
+    "\n",
+    "![](./images/update_rule_q.png)\n",
+    "\n",
+    "How big is the input space to the state value function V?\n",
+    "\n",
+    "How much bigger is the input space to the state-action value function Q?\n",
+    "\n"
    ]
   },
   {
