--- a/Intro to RL.ipynb
+++ b/Intro to RL.ipynb
@@ -130,7 +130,7 @@
     "- A robot might receive a negative reward as it's battery depletes, but still make good progress towards its goal.\n",
     "- A chess playing agent might receive a positive reward for taking an opponent's piece, but make a bad move in doing so by exposing its king to an attack eventually causing it to lose the game.\n",
     "\n",
-    "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\". A measure of this is amount of reward that an agent can expect from this point onwards.\n",
+    "What we really want to know is not the instantaneous reward, but \"How good is the position I'm in right now?\", that is, what amount of reward can our agent get from this point onwards.\n",
     "This future reward is also known as the return.\n",
     "\n",
     "![](./images/undiscounted_return.png)\n",
@@ -145,15 +145,20 @@
     "\n",
     "![](./images/decay.png)\n",
     "\n",
-    "We can encode this into our goal by using a **discount factor**, $\\gamma \\in [0, 1]$ ($\\gamma$ between 0 and 1). This makes the goal become:\n",
+    "We can encode this into our goal by using a **discount factor**, $\\gamma \\in [0, 1]$ ($\\gamma$ between 0 and 1). This makes our agent value more immediate rewards more than those which can be reached further in the future. This makes the goal become:\n",
     "\n",
     "![](./images/discounted_return.png)\n",
     "\n",
     "\n",
     "The value of these return values can be defined recursively as shown below.\n",
-    "Because of this, we can calculate the returns by having our agent play one run-through of the game and then *back-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
     "\n",
     "![](./images/recursive_return.png)\n",
+    "\n",
+    "Because of this, we can calculate the returns by having our agent play one run-through of the game and then *backing-up* through that trajectory, step-by-step, looking forward at what the future reward was from that point.\n",
+    "\n",
+    "The back up procedure is a way that we can determine the returns for each state that we visited in an episode. The return of a terminal state is always zero, but the terminal state is not the goal, it is the state which our agent transitions into once the episode has finished. We do backup by looking at the final timestep before our agent went into the terminal state - here it is easy to calculate the return. It is simply the reward that we received for moving into this state, because the expected return from the next state (terminal state) is always zero. Then using the recursive expression of returns (above), we can calculate the return for the timestep before that. This can be done recursively until we reach our initial state. At this point we know what all of the returns were for the whole episode.\n",
+    "\n",
+    "![](./images/backup.png)\n",
     "\n",
     "### So how good *is* each state?\n",
     "In general, the goal of reinforcement learning is to maximise the **expected** future reward. That is, to maximise the expected return from a the current state onwards. The measure of this, is called the *value* of the state (or the state value). A function that predicts this value is called a **state-value function** or **value function**.\n",
